# readmit-iq

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: e5456cd20c1d_create_patient_table.py
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: PatientForm.tsx  PredictionResultPanel.tsx  ShapBarChart.tsx
frontend/src/types/: api.ts
infra/docker/: docker-compose.yml
scripts/: setup.sh
src/readmit_iq/: config.py  models.py
src/readmit_iq/api/: app.py  schemas.py
src/readmit_iq/dao/: patient_dao.py
src/readmit_iq/features/: feature_engineering.py  feature_spec.py
src/readmit_iq/ingest/: bronze.py  gold.py  silver.py  spark_session.py
src/readmit_iq/ml/: explain.py  predict.py  train.py
src/readmit_iq/rag/: embedder.py  indexer.py  pubmed.py  query_composer.py  retriever.py
src/readmit_iq/scripts/: seed_data.py
src/readmit_iq/services/: cohort_service.py
src/readmit_iq/utils/: db.py  io.py
tests/: conftest.py  test_api_explain_with_citations.py  test_api_health.py  test_api_predict.py  test_bronze.py  test_cohort_service.py  test_config.py  test_db.py  test_explain.py  test_feature_engineering.py  test_gold.py  test_io.py  test_patient_dao.py  test_query_composer.py  test_retriever.py  test_seed_data.py  test_silver.py  test_train.py
